envoy/envoy.yaml
---
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9191
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                generate_request_id: false
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: https_redirect
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/gw/"
                          route:
                            prefix_rewrite: "/"
                            cluster: grpc-gateway
                        - match:
                            prefix: "/api/"
                          route:
                            prefix_rewrite: "/"
                            cluster: http-json
                        - match:
                            prefix: "/"
                          route:
                            cluster: ping-service
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: { }
                              regex: \*
                        allow_credentials: true
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/etc/envoy/proto.pb"
                      services:
                        - "ping_service.CoreService"
                      print_options:
                        add_whitespace: false
                      match_incoming_request_route: true
                      convert_grpc_status: true
                      auto_mapping: false
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      dynamic_stats: false
  clusters:
  - name: ping-service
    connect_timeout: 1s
    type: logical_dns
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ping-service
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: bench-server
                    port_value: 6790
  - name: http-json
    connect_timeout: 1s
    type: logical_dns
    http_protocol_options: { }
    load_assignment:
      cluster_name: http-json
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: bench-server
                    port_value: 6789
  - name: grpc-gateway
    connect_timeout: 1s
    type: logical_dns
    http_protocol_options: { }
    load_assignment:
      cluster_name: grpc-gateway
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: bench-grpc-gateway
                    port_value: 8081
